# bq-assist

./: .env.test.example  .gitignore  Cargo.toml  README.md
src/: cli.rs  errors.rs  main.rs  output.rs
src/bigquery/: client.rs  executor.rs  mod.rs  queries.rs  validators.rs
src/commands/: init.rs  mod.rs
src/models/: bigquery.rs  config.rs  mod.rs  schema.rs
src/templates/: dataset_option.sql  stats_child_clones.sql  stats_child_snapshots.sql  stats_column_boolean.sql  stats_column_datetime.sql  stats_column_frequency.sql  stats_column_generic.sql  stats_column_info.sql  stats_column_numeric.sql  stats_column_string.sql  stats_dataset_billing.sql  stats_dataset_info.sql  stats_dataset_options.sql  stats_dataset_storage.sql  stats_dataset_table_sizes.sql  stats_dataset_tables.sql  stats_partitions.sql  stats_table_info.sql  stats_table_options.sql  stats_table_storage.sql  table_clustering_list.sql  table_columns_add.sql  table_columns_cast.sql  table_columns_cast_fast.sql  table_columns_list.sql  table_columns_remove.sql  table_columns_rename.sql  table_copy_add.sql  table_copy_list.sql  table_copy_remove.sql  table_ddl.sql  table_option.sql  table_partitioning_ingestion_addremove.sql  table_partitioningclustering_addremove.sql  table_queries_modify.sql  table_queries_read.sql  table_rename.sql  table_restore_rewind.sql  table_snapshots_add.sql  table_snapshots_list.sql  (+1 more)
tests/: clustering_test.rs  columns_test.rs  copy_test.rs  dataset_test.rs  partitioning_test.rs  queries_test.rs  snapshot_test.rs  table_test.rs
tests/fixtures/: clustering.sql  (+11 more)
(+15 files in other folders)
