[package]
name = "bq-assist"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
colored = "2.1"
config = "0.15.22"
dialoguer = "0.12.0"
directories = "6.0.0"
google-cloud-bigquery = { package="gcloud-bigquery", version="1.5.0" }
humantime = "2.3.0"
md5 = "0.8.0"
minijinja = { version = "2.19.0", features = ["loader"] }
minijinja-embed = "2.19.0"
rand = "0.10.1"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
tabled = "0.20.0"
tokio = { version = "1.49.0", features = ["full"] }

[build-dependencies]
minijinja-embed = "2.19.0"
